tests/NormalTests/paczka2/big_fuzzy/82452380.err
Error in line 16: bNRhxx A466 9,3
Error in line 22: WCSjO7dk S549 13,2
Error in line 13: lvE2CK5uAzz S549 0,6
Error in line 21: vFwIEJdut S375 82,6
Error in line 33: bNRhxx S549 40,1
Error in line 41: bNRhxx A466 77,5
Error in line 50: 0haHm A340 27,6
Error in line 54: 0haHm S549 40,4
Error in line 72: 0haHm S375 61,1
Error in line 69: Ii2gMk A466 18,1
Error in line 79: 0haHm A340 1,6
Error in line 76: S375 A466 37,9
Error in line 83: S375 A340 96,8
Error in line 86: WCSjO7dk S549 61,0
Error in line 97: vFwIEJdut S375 246,4
Error in line 103: S375 S375 24,4
Error in line 101: vFwIEJdut A466 99,0
Error in line 110: lvE2CK5uAzz A466 54,0
Error in line 106: vFwIEJdut S549 13,5
Error in line 115: vFwIEJdut A466 37,7
Error in line 73: 0haHm A340 57,3
Error in line 125: lvE2CK5uAzz S549 45,6
Error in line 128: lvE2CK5uAzz A466 24,5
Error in line 131: S375 S549 66,7
Error in line 135: Ii2gMk A340 34,3
Error in line 141: Ii2gMk S375 93,8
Error in line 140: bNRhxx S549 34,0
Error in line 150: vFwIEJdut A340 11,2
Error in line 155: lvE2CK5uAzz S549 63,8
Error in line 171: bNRhxx S375 69,09
Error in line 177: 0haHm A466 43,4
Error in line 180: 0haHm S375 13,1
Error in line 183: 0haHm A466 76,4
Error in line 176: vFwIEJdut A466 43,3
Error in line 164: bNRhxx A340 8,3
Error in line 201: S375 S549 87,9
Error in line 203: S375 A340 2,5
Error in line 207: S375 S375 33,5
Error in line 211: lvE2CK5uAzz A466 26,3
Error in line 217: bNRhxx S549 30,5
Error in line 234: 0haHm A340 56,2
Error in line 240: S375 S375 99,6
Error in line 243: S375 S549 21,5
Error in line 246: Ii2gMk S375 40,5
